--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,30 +42,32 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - restore_cache:
-          keys: [frontend-build]
+      - save_cache:
+          paths: [frontend/node_modules]
+          key: frontend-build
+      # - restore_cache:
+      #     keys: [frontend-build]
       - run:
           name: Build front-end
           command: |
             npm run lint
-      - save_cache:
-          paths: [~/frontend/node_modules]
-          key: frontend-build
+      
 
   build-backend:
     docker:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - restore_cache:
-          keys: [backend-build]
+      - save_cache:
+          paths: [backend/node_modules]
+          key: backend-build
+      # - restore_cache:
+      #     keys: [backend-build]
       - run:
           name: Back-end build
           command: |
              npm run lint
-      - save_cache:
-          paths: [~/backend/node_modules]
-          key: backend-build
+      
 
 #   test-frontend:
 #     docker:
