--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,15 +42,21 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - save_cache:
-          paths: [frontend/node_modules]
-          key: frontend-build
-      # - restore_cache:
-      #     keys: [frontend-build]
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: install package.json
+          command: |
+             cd frontend
+             npm install
+             cp package.json ./dist
       - run:
           name: Build front-end
           command: |
             npm run lint
+      - save_cache:
+          paths: [frontend/node_modules]
+          key: frontend-build
       
 
   build-backend:
@@ -58,15 +64,21 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: install package.json
+          command: |
+             cd backend
+             npm install
+             cp package.json ./dist
+      - run:
+          name: Build back-end
+          command: |
+            npm run lint
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
-      # - restore_cache:
-      #     keys: [backend-build]
-      - run:
-          name: Back-end build
-          command: |
-             npm run lint
       
 
 #   test-frontend:
