--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
       - run:
           name: Build front-end
           command: |
-            npm run lint
+            npm run build
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -75,7 +75,7 @@ jobs:
       - run:
           name: Build back-end
           command: |
-            npm run lint
+            npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
