--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,7 @@ jobs:
       - run:
           name: Build front-end
           command: |
+            cd frontend
             npm run build
       - save_cache:
           paths: [frontend/node_modules]
@@ -75,6 +76,7 @@ jobs:
       - run:
           name: Build back-end
           command: |
+            cd backend
             npm run build
       - save_cache:
           paths: [backend/node_modules]
