--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,21 +81,32 @@ jobs:
           key: backend-build
       
 
-#   test-frontend:
-#     docker:
-#       # Docker image here
-#     steps:
-#       # Checkout code from git
-#       # Restore from cache
-#       # Your job code here
+test-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Run test for Frontend
+          command: |
+             cd frontend
+             npm run test
+      
                 
-#   test-backend:
-#     docker:
-#       # Docker image here
-#     steps:
-#       # Checkout code from git
-#       # Restore from cache
-#       # Your job code here
+test-backend:
+  docker:
+    - image: circleci/node:13.8.0
+  steps:
+    - checkout
+    - restore_cache:
+        keys: [backend-build]
+    - run:
+          name: Run test for Backend
+          command: |
+             cd backend
+             npm run test
             
 #   scan-frontend:
 #     docker:
@@ -284,10 +295,10 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
-      # - test-frontend:
-      #     requires: [build-frontend]
-      # - test-backend:
-      #     requires: [build-backend]
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
       # - scan-backend:
       #     requires: [build-backend]
       # - scan-frontend:
