--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,6 +91,7 @@ test-frontend:
           name: Run test for Frontend
           command: |
              cd frontend
+             npm install
              npm run test
                 
 test-backend:
@@ -104,6 +105,7 @@ test-backend:
           name: Run test for Backend
           command: |
              cd backend
+             npm install
              npm run test
             
 #   scan-frontend:
