--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,10 +82,8 @@ jobs:
             cd backend
             npm run build
       - slack/notify:
-          color: "red"
-          message: Failed in Build <<pipeline.git.revision>> of <<pipeline.git.branch>>  $CIRCLE_PROJECT_REPONAME
-      - slack/status:
-          fail_only: true
+          event: fail
+          template: basic_fail_1
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
