--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,6 +82,7 @@ jobs:
             cd backend
             npm run build
       - slack/notify:
+          channel: ${SLACK_DEFAULT_CHANNEL}
           event: fail
           template: basic_fail_1
       - save_cache:
