--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,17 +154,17 @@ jobs:
             command: |
               aws cloudformation deploy \
                 --template-file .circleci/files/backend.yml \
-                # --tags project=udapeople \
-                # --stack-name "udapeople-backend-$WORKFLOW-ID" \
-                # --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
+                --tags project=udapeople \
+                --stack-name "udapeople-backend-$WORKFLOW-ID" \
+                --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
         - run:
             name: Ensures deployment of front-end infrastructure
             command: |
               aws cloudformation deploy \
                 --template-file .circleci/files/frontend.yml \
-                # --tags project=udapeople \
-                # --stack-name "udapeople-frontend-$WORKFLOW-ID" \
-                # --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
+                --tags project=udapeople \
+                --stack-name "udapeople-frontend-$WORKFLOW-ID" \
+                --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
 #       - run:
 #           name: Add back-end ip to ansible inventory
 #           command: |
