--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,16 +165,18 @@ jobs:
                 --tags project=udapeople \
                 --stack-name "udapeople-frontend-$WORKFLOW-ID" \
                 --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
-#       - run:
-#           name: Add back-end ip to ansible inventory
-#           command: |
-#             # Your code here
-#             exit 1
-#       - persist_to_workspace:
-#           root: ~/
-#           paths:
-#             - project/.circleci/ansible/inventory.txt
-#       # Here's where you will add some code to rollback on failure      
+        
+        - run:
+            name: Add back-end ip to ansible inventory
+            command: |
+              aws ec2 describe-instances \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --output text >> inventory            
+        - persist_to_workspace:
+            root: ~/
+            paths:
+              - project/.circleci/ansible/inventory.txt
+        # Here's where you will add some code to rollback on failure      
 
 #   configure-infrastructure:
 #     docker:
