--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,6 +165,11 @@ jobs:
                 --tags project=udapeople \
                 --stack-name "udapeople-frontend-$WORKFLOW-ID" \
                 --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
+        - run:
+        #install tar for adding backend ip to ansible inventory.
+            name: Install tar/gzip utility
+            command: |
+              yum -y install tar gzip curl
         
         - run:
             name: Add back-end ip to ansible inventory
