--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,24 +183,44 @@ jobs:
               - project/.circleci/ansible/inventory.txt
         # Here's where you will add some code to rollback on failure      
 
-#   configure-infrastructure:
-#     docker:
-#       # Docker image here that supports Ansible
-#     steps:
-#       # Checkout code from git
-#       # Add ssh keys with fingerprint
-#       # attach workspace
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             # Your code here
-#             exit 1
-#       - run:
-#           name: Configure server
-#           command: |
-#             # Your code here
-#             exit 1
-#       # Here's where you will add some code to rollback on failure      
+  configure-infrastructure:
+      docker:
+        - image: python:3.7-alpine3.11
+          environment:
+            TYPEORM_CONNECTION: $TYPEORM_CONNECTION
+            TYPEORM_HOST: $TYPEORM_HOST
+            TYPEORM_USERNAME: $TYPEORM_USERNAME
+            TYPEORM_PASSWORD: $TYPEORM_PASSWORD
+            TYPEORM_DATABASE: $TYPEORM_DATABASE
+            TYPEORM_MIGRATIONS: $TYPEORM_MIGRATIONS
+            TYPEORM_ENTITIES: $TYPEORM_ENTITIES
+      steps:
+        - checkout 
+        # Add ssh keys with fingerprint
+        - add_ssh_keys:
+            fingerprints: ["d7:c6:8a:65:14:85:43:7e:be:fb:ee:84:ad:69:c7:bd"]
+        - attach_workspace:
+             at: .circleci/ansible
+        - run:
+            name: Install dependencies
+            command: |
+              apk add --no-cache \
+                  python3 \
+                  py3-pip \
+              && pip3 install --upgrade pip \
+              && pip3 install \
+                  awscli \
+              && rm -rf /var/cache/apk/*
+              apk add --update ansible 
+        - run:
+            name: Configure server
+            command: |
+              pwd &&
+              ls -la
+              cat .circleci/ansible/inventory.txt
+              ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/configure-server.yml
+              ansible-playbook -i inventory.txt main4.yml
+        # Here's where you will add some code to rollback on failure      
 
 #   run-migrations:
 #     docker:
