--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -219,7 +219,7 @@ jobs:
               ls -la
               cat .circleci/ansible/inventory.txt
               ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/configure-server.yml
-              ansible-playbook -i inventory.txt main4.yml
+        # ansible-playbook -i inventory.txt main4.yml
         # Here's where you will add some code to rollback on failure      
 
 #   run-migrations:
