--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -222,22 +222,39 @@ jobs:
         # ansible-playbook -i inventory.txt main4.yml
         # Here's where you will add some code to rollback on failure      
 
-#   run-migrations:
-#     docker:
-#       # Docker image here that supports NodeJS
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Run migrations
-#           command: |
-#             # Your code here
-#             exit 1
-#       - run:
-#           name: Send migration results to memstash
-#           command: |
-#             # Your code here
-#             exit 1
-#      # Here's where you will add some code to rollback on failure      
+  run-migrations:
+    docker:
+      # Docker image here that supports NodeJS
+      - image: circleci/node 13.8.0
+    steps:
+      # Checkout code from git
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Run migrations
+          command: |
+            # Your code here
+            # exit 1
+            cd backend
+            npm install
+            npm run build
+            npm run migrations > migrations.txt
+      - run:
+          name: Send migration results to memstash
+          command: |
+            # Your code here
+            # exit 1
+            cd backend
+            if grep -q "has been executed successfully" project/backend/migrations.txt
+            then
+              curl -H "Content-Type: text/plain" -H "388fb936-7b3c-4723-a7cf-300cce587f63" --request PUT --data "MIGRATION_SUCCESS" https://api.memstash.io/values/url_${WORKFLOW_ID}
+                echo "1"
+            else
+              curl -H "Content-Type: text/plain" -H "388fb936-7b3c-4723-a7cf-300cce587f63" \--request PUT --data "MIGRATION_FAILURE" https://api.memstash.io/values/url_${WORKFLOW_ID}
+              echo "0"
+            fi
+    # Here's where you will add some code to rollback on failure      
 
 #   deploy-frontend:
 #     docker:
@@ -354,8 +371,8 @@ workflows:
           #     only: [test-feature-branch]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      # - run-migrations:
-      #     requires: [configure-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
       # - deploy-frontend:
       #     requires: [run-migrations]
       # - deploy-backend:
