--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -239,14 +239,16 @@ jobs:
             cd backend
             npm install
             npm run build
-            npm run migrations > migrations.txt
+            touch migrations.txt
+            sudo npm run migrations > migrations.txt
+            cat migrations.txt
       - run:
           name: Send migration results to memstash
           command: |
             # Your code here
             # exit 1
             cd backend
-            if grep -q "has been executed successfully" project/backend/migrations.txt
+            if grep -q "has been executed successfully" backend/migrations.txt
             then
               curl -H "Content-Type: text/plain" -H "388fb936-7b3c-4723-a7cf-300cce587f63" --request PUT --data "MIGRATION_SUCCESS" https://api.memstash.io/values/url_${WORKFLOW_ID}
                 echo "1"
