--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -229,8 +229,8 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
-      - restore_cache:
-          keys: [backend-build]
+      - attach_workspace:
+          at: ~/
       - run:
           name: Run migrations
           command: |
