--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -222,48 +222,74 @@ jobs:
         # ansible-playbook -i inventory.txt main4.yml
         # Here's where you will add some code to rollback on failure      
 
+  # run-migrations:
+  #   docker:
+  #     # Docker image here that supports NodeJS
+  #     - image: circleci/node:13.8.0
+  #   steps:
+  #     # Checkout code from git
+  #     - checkout
+  #     - run:
+  #         name: awscli install
+  #         command: |
+  #           sudo apt-get -y -qq update
+  #           sudo apt-get -qq install awscli
+  #           sudo apt-get -y -qq install python3
+  #     - run:
+  #         name: Run migrations
+  #         command: |
+  #           # Your code here
+  #           # exit 1
+  #           cd backend
+  #           npm install
+  #           npm run build
+  #           touch migrations.txt
+  #           sudo npm run migrations >> migrations.txt
+  #           cat migrations.txt
+  #     - run:
+  #         name: Send migration results to memstash
+  #         command: |
+  #           # Your code here
+  #           # exit 1
+  #           cd backend
+  #           if grep -q "has been executed successfully" backend/migrations.txt
+  #           then
+  #             curl -H "Content-Type: text/plain" -H "388fb936-7b3c-4723-a7cf-300cce587f63" --request PUT --data "MIGRATION_SUCCESS" https://api.memstash.io/values/url_${WORKFLOW_ID}
+  #               echo "1"
+  #           else
+  #             curl -H "Content-Type: text/plain" -H "388fb936-7b3c-4723-a7cf-300cce587f63" \--request PUT --data "MIGRATION_FAILURE" https://api.memstash.io/values/url_${WORKFLOW_ID}
+  #             echo "0"
+  #           fi
+  #           SUCCESS=$(curl -H "token: ${CIRCLE_WORKFLOW_ID}" \
+  #           --request GET https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID})
+  #           echo "Value sent to memstash: $SUCCESS"
+  #   # Here's where you will add some code to rollback on failure     
   run-migrations:
     docker:
-      # Docker image here that supports NodeJS
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
       - checkout
-      - run:
-          name: awscli install
-          command: |
-            sudo apt-get -y -qq update
-            sudo apt-get -qq install awscli
-            sudo apt-get -y -qq install python3
+      - attach_workspace:
+          at: ~/
       - run:
           name: Run migrations
           command: |
-            # Your code here
-            # exit 1
             cd backend
             npm install
             npm run build
-            touch migrations.txt
-            sudo npm run migrations >> migrations.txt
+            touch migrations_log.txt
+            sudo  npm run migrations  >> migrations.txt
             cat migrations.txt
       - run:
           name: Send migration results to memstash
           command: |
-            # Your code here
-            # exit 1
-            cd backend
-            if grep -q "has been executed successfully" backend/migrations.txt
+            if  grep "has been executed successfully" backend/migrations_log.txt
             then
-              curl -H "Content-Type: text/plain" -H "388fb936-7b3c-4723-a7cf-300cce587f63" --request PUT --data "MIGRATION_SUCCESS" https://api.memstash.io/values/url_${WORKFLOW_ID}
-                echo "1"
-            else
-              curl -H "Content-Type: text/plain" -H "388fb936-7b3c-4723-a7cf-300cce587f63" \--request PUT --data "MIGRATION_FAILURE" https://api.memstash.io/values/url_${WORKFLOW_ID}
-              echo "0"
+            curl -H "Content-Type: text/plain" -H "token: 388fb936-7b3c-4723-a7cf-300cce587f63" --request PUT --data "$BACKEND_IP" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID}      
             fi
             SUCCESS=$(curl -H "token: ${CIRCLE_WORKFLOW_ID}" \
             --request GET https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID})
-            echo "Value sent to memstash: $SUCCESS"
-    # Here's where you will add some code to rollback on failure      
+            echo "Value sent to memstash: $SUCCESS"   
 
   deploy-frontend:
     docker:
