--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -277,13 +277,13 @@ jobs:
             cd backend
             npm install
             npm run build
-            touch migrations_log.txt
+            touch migrations.txt
             sudo npm run migrations >> migrations.txt
             cat migrations.txt
       - run:
           name: Send migration results to memstash
           command: |
-            if  grep "has been executed successfully" backend/migrations_log.txt
+            if  grep "has been executed successfully" backend/migrations.txt
             then
             curl -H "Content-Type: text/plain" -H "token: 388fb936-7b3c-4723-a7cf-300cce587f63" --request PUT --data "$BACKEND_IP" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID}      
             fi
