--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -269,27 +269,34 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - attach_workspace:
-          at: ~/
+      - run:
+          name: awscli install
+          command: |
+            sudo apt-get -y -qq update
+            sudo apt-get -qq install awscli
+            sudo apt-get -y -qq install python3
       - run:
           name: Run migrations
           command: |
             cd backend
             npm install
             npm run build
-            touch migrations.txt
-            sudo npm run migrations >> migrations.txt
-            cat migrations.txt
+            touch migration.txt
+            sudo npm run migrations >> migration.txt
+            cat migration.txt
       - run:
           name: Send migration results to memstash
           command: |
-            if  grep "has been executed successfully" backend/migrations.txt
+            if grep -q "has been executed successfully." migration.txt
             then
-            curl -H "Content-Type: text/plain" -H "token: 388fb936-7b3c-4723-a7cf-300cce587f63" --request PUT --data "$BACKEND_IP" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID}      
+            curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
+            --request PUT \
+            --data "1" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
+            else
+            curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
+            --request PUT \
+            --data "0" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
             fi
-            SUCCESS=$(curl -H "token: ${CIRCLE_WORKFLOW_ID}" \
-            --request GET https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID})
-            echo "Value sent to memstash: $SUCCESS"   
 
   deploy-frontend:
     docker:
