--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -176,7 +176,14 @@ jobs:
             command: |
               aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text >> inventory            
+              --output text >> inventory
+        - run:
+            name: Dependencies
+            command: |
+              cat .circleci/ansible/inventory.txt
+              ls ~/project/.circleci/ansible/
+              cat ~/project/.circleci/ansible/inventory.txt
+              yum -y install tar gzip jq npm          
         - persist_to_workspace:
             root: ~/
             paths:
@@ -275,28 +282,34 @@ jobs:
             sudo apt-get -y -qq update
             sudo apt-get -qq install awscli
             sudo apt-get -y -qq install python3
+      - restore_cache:
+            keys: [backend-build]
       - run:
           name: Run migrations
           command: |
             cd backend
             npm install
             npm run build
-            touch migration.txt
-            sudo npm run migrations >> migration.txt
-            cat migration.txt
+            # npm run migrations >> migration.txt
+            # cat migration.txt
+            MIGRATION_RES=$(npm run migrations)
+            RES=`echo $MIGRATION_RES | grep -c "executed successfully"`
       - run:
           name: Send migration results to memstash
           command: |
-            if grep -q "has been executed successfully." migration.txt
-            then
-            curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
-            --request PUT \
-            --data "1" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
-            else
-            curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
-            --request PUT \
-            --data "0" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
-            fi
+            # if grep -q "has been executed successfully." migration.txt
+            # then
+            # curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
+            # --request PUT \
+            # --data "1" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
+            # else
+            # curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
+            # --request PUT \
+            # --data "0" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
+            # fi
+            echo "RES value to send to memstash: $RES"
+            curl -H "Content-Type: text/plain" -H "token: 388fb936-7b3c-4723-a7cf-300cce587f63" \
+                --request PUT --data `echo $RES` https://api.memstash.io/values/migrationRes
 
   deploy-frontend:
     docker:
