--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -229,52 +229,12 @@ jobs:
         # ansible-playbook -i inventory.txt main4.yml
         # Here's where you will add some code to rollback on failure      
 
-  # run-migrations:
-  #   docker:
-  #     # Docker image here that supports NodeJS
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     # Checkout code from git
-  #     - checkout
-  #     - run:
-  #         name: awscli install
-  #         command: |
-  #           sudo apt-get -y -qq update
-  #           sudo apt-get -qq install awscli
-  #           sudo apt-get -y -qq install python3
-  #     - run:
-  #         name: Run migrations
-  #         command: |
-  #           # Your code here
-  #           # exit 1
-  #           cd backend
-  #           npm install
-  #           npm run build
-  #           touch migrations.txt
-  #           sudo npm run migrations >> migrations.txt
-  #           cat migrations.txt
-  #     - run:
-  #         name: Send migration results to memstash
-  #         command: |
-  #           # Your code here
-  #           # exit 1
-  #           cd backend
-  #           if grep -q "has been executed successfully" backend/migrations.txt
-  #           then
-  #             curl -H "Content-Type: text/plain" -H "388fb936-7b3c-4723-a7cf-300cce587f63" --request PUT --data "MIGRATION_SUCCESS" https://api.memstash.io/values/url_${WORKFLOW_ID}
-  #               echo "1"
-  #           else
-  #             curl -H "Content-Type: text/plain" -H "388fb936-7b3c-4723-a7cf-300cce587f63" \--request PUT --data "MIGRATION_FAILURE" https://api.memstash.io/values/url_${WORKFLOW_ID}
-  #             echo "0"
-  #           fi
-  #           SUCCESS=$(curl -H "token: ${CIRCLE_WORKFLOW_ID}" \
-  #           --request GET https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID})
-  #           echo "Value sent to memstash: $SUCCESS"
-  #   # Here's where you will add some code to rollback on failure     
   run-migrations:
     docker:
+      # Docker image here that supports NodeJS
       - image: circleci/node:13.8.0
     steps:
+      # Checkout code from git
       - checkout
       - run:
           name: awscli install
@@ -282,34 +242,75 @@ jobs:
             sudo apt-get -y -qq update
             sudo apt-get -qq install awscli
             sudo apt-get -y -qq install python3
-      - restore_cache:
-            keys: [backend-build]
       - run:
           name: Run migrations
           command: |
+            # Your code here
+            # exit 1
             cd backend
             npm install
             npm run build
-            # npm run migrations >> migration.txt
-            # cat migration.txt
-            MIGRATION_RES=$(npm run migrations)
-            RES=`echo $MIGRATION_RES | grep -c "executed successfully"`
+            # npm audit fix --audit-level=critical --force
+            # echo "_________________ Step Ended ___________________"
+            touch migration.txt
+            npm run migrations >> migration.txt
+            cat migration.txt
       - run:
           name: Send migration results to memstash
           command: |
-            # if grep -q "has been executed successfully." migration.txt
-            # then
-            # curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
-            # --request PUT \
-            # --data "1" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
-            # else
-            # curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
-            # --request PUT \
-            # --data "0" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
-            # fi
-            echo "RES value to send to memstash: $RES"
-            curl -H "Content-Type: text/plain" -H "token: 388fb936-7b3c-4723-a7cf-300cce587f63" \
-                --request PUT --data `echo $RES` https://api.memstash.io/values/migrationRes
+            # Your code here
+            # exit 1
+            cd backend
+             if grep -q "has been executed successfully." migration.txt
+            then
+            curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
+            --request PUT \
+            --data "1" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
+            else
+            curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
+            --request PUT \
+            --data "0" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
+            fi
+  #   # Here's where you will add some code to rollback on failure     
+  # run-migrations:
+  #   docker:
+  #     - image: circleci/node:13.8.0
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: awscli install
+  #         command: |
+  #           sudo apt-get -y -qq update
+  #           sudo apt-get -qq install awscli
+  #           sudo apt-get -y -qq install python3
+  #     - restore_cache:
+  #           keys: [backend-build]
+  #     - run:
+  #         name: Run migrations
+  #         command: |
+  #           cd backend
+  #           npm install
+  #           npm run build
+  #           # npm run migrations >> migration.txt
+  #           # cat migration.txt
+  #           MIGRATION_RES=$(npm run migrations)
+  #           RES=`echo $MIGRATION_RES | grep -c "executed successfully"`
+  #     - run:
+  #         name: Send migration results to memstash
+  #         command: |
+  #           # if grep -q "has been executed successfully." migration.txt
+  #           # then
+  #           # curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
+  #           # --request PUT \
+  #           # --data "1" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
+  #           # else
+  #           # curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID}" \
+  #           # --request PUT \
+  #           # --data "0" https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID}
+  #           # fi
+  #           echo "RES value to send to memstash: $RES"
+  #           curl -H "Content-Type: text/plain" -H "token: 388fb936-7b3c-4723-a7cf-300cce587f63" \
+  #               --request PUT --data `echo $RES` https://api.memstash.io/values/migrationRes
 
   deploy-frontend:
     docker:
