--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -31,4 +31,5 @@
       TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
       TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
       TYPEORM_MIGRATIONS: "{{ lookup('env','TYPEORM_MIGRATIONS') }}"
+      TYPEORM_MIGRATIONS_DIR: "{{ lookup('env','TYPEORM_MIGRATIONS_DIR') }}"
       TYPEORM_ENTITIES: "{{ lookup('env','TYPEORM_ENTITIES') }}"
