--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -337,10 +337,10 @@ jobs:
       - run:
           name: Deploy frontend objects
           command: |
-            npm install webpack-dev-server -g
+            sudo npm install webpack-dev-server -g
             cd frontend
-            npm install
-            npm run build
+            sudo npm install
+            sudo npm run build
             aws s3 cp ./dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       # Here's where you will add some code to rollback on failure      
                     
