--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,10 +49,9 @@ commands:
             SUCCESS = 1
             if(( $SUCCESS==1 )); 
             then
-            cd ~/project/backend
-            npm install
-            Add revert code here. You can find this in the Getting Started section.
-              exit 1
+              cd backend
+              npm install
+              npm run migrations:revert
             fi
               
 jobs:
