--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ commands:
           command: |
             SUCCESS=$(curl -H "token: ${CIRCLE_WORKFLOW_ID}" \
             --request GET https://api.memstash.io/values/migration-${CIRCLE_WORKFLOW_ID})
-            echo "************** SUCCESS = $SUCCESS
+            echo "************** SUCCESS = $SUCCESS"
             SUCCESS = 1
             if(( $SUCCESS==1 )); 
             then
