--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -442,14 +442,14 @@ jobs:
             --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
             --tags project=udapeople
 
-            echo Delete old stacks/resources
+            # echo Delete old stacks/resources
             
-            if [[ "${STACKS[@]}" =~ "${OldWorkflowId}" ]]
-            then              
-              aws s3 rm s3://udapeople-${OldWorkflowId} --recursive             
-              aws cloudformation delete-stack --stack-name "n-udapeople-backend-${OldWorkflowID}"             
-              aws cloudformation delete-stack --stack-name "n-udapeople-frontend-${OldWorkflowID}"
-            fi
+            # if [[ "${STACKS[@]}" =~ "${OldWorkflowId}" ]]
+            # then              
+            #   aws s3 rm s3://udapeople-${OldWorkflowId} --recursive             
+            #   aws cloudformation delete-stack --stack-name "n-udapeople-backend-${OldWorkflowID}"             
+            #   aws cloudformation delete-stack --stack-name "n-udapeople-frontend-${OldWorkflowID}"
+            # fi
       
       # Here's where you will add some code to rollback on failure
       - destroy-environment
